--- a/beginner-part-1/lesson-01-begin.html
+++ b/beginner-part-1/lesson-01-begin.html
@@ -8,13 +8,16 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome, Begin, Downstrokes and Whole Notes | Beginner - Part 1 - Lesson 1 | Joy of Jamming</title>
+    <title>Welcome, Begin, Downstrokes, and Whole Notes | Beginner Lesson 1 | Joy of Jamming</title>
     <meta name="description"
         content="Welcome! These guitar lesson videos cover muting strings, downstrokes and whole notes on guitar.">
     <meta name='author' content='Chris Colby van Scyoc'>
     <!-- <link href="css/styles.css" rel="stylesheet"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3689162469144098"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -91,13 +94,13 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
         <div class="container text-center">
             <div class="row">
                 <aside class="col d-none d-sm-block">
+                    <h4>Lessons</h4>
 
                     <ul class="grey lighten-5 table-of-contents z-depth-1" id="nav-side-single"
                         style="overflow: scroll; padding-right:5px; padding-top:5px; padding-bottom:5px; padding-left:0px; line-height:25px;">
 
                         <li style="font-size:16px; margin-top:5px; margin-bottom:5px; margin-left:-10px;">
-                            <a href="lesson-01-begin.html" class="blue-text">Welcome & Whole
-                                Notes</a><!--consider absolute links for a tags to youtube embeds-->
+                            <a href="lesson-01-begin.html" class="blue-text">Welcome & Whole Notes</a><!--consider absolute links for a tags to youtube embeds-->
                         </li>
 
                         <li>
@@ -105,8 +108,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                         </li>
 
                         <li>
-                            <a href="lesson-03-quarter-notes.html" class="side-nav-left">Quarter
-                                Notes</a>
+                            <a href="lesson-03-quarter-notes.html" class="side-nav-left">Quarter Notes</a>
                         </li>
 
                         <li>
@@ -114,28 +116,23 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                         </li>
 
                         <li>
-                            <a href="lesson-05-open-chords-E-minor-7.html" class="side-nav-left">Em7
-                                Chord</a>
+                            <a href="lesson-05-open-chords-E-minor-7.html" class="side-nav-left">Em7 Chord</a>
                         </li>
 
                         <li>
-                            <a href="lesson-06-open-chords-E-minor.html" class="side-nav-left">Em
-                                Chord</a>
+                            <a href="lesson-06-open-chords-E-minor.html" class="side-nav-left">Em Chord</a>
                         </li>
 
                         <li>
-                            <a href="lesson-07-open-chords-E-major.html" class="side-nav-left">E
-                                Major Chord</a>
+                            <a href="lesson-07-open-chords-E-major.html" class="side-nav-left">E Major Chord</a>
                         </li>
 
                         <li>
-                            <a href="lesson-08-open-chords-E7.html" class="side-nav-left">E7
-                                Chord</a>
+                            <a href="lesson-08-open-chords-E7.html" class="side-nav-left">E7 Chord</a>
                         </li>
 
                         <li>
-                            <a href="lesson-09-changing-open-chords-A-minor-7.html" class="side-nav-left">Changing
-                                Chords</a>
+                            <a href="lesson-09-changing-open-chords-A-minor-7.html" class="side-nav-left">Changing Chords</a>
                         </li>
 
                         <li>
@@ -153,8 +150,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                         </li>
 
                         <li>
-                            <a href="lesson-13-notes-on-low-E-string.html" class="side-nav-left">Low
-                                E String</a>
+                            <a href="lesson-13-notes-on-low-E-string.html" class="side-nav-left">Low E String</a>
                         </li>
 
                         <li>
@@ -163,15 +159,68 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                         </li>
 
                         <li>
-                            <a href="lesson-15-flats-and-sharps.html" class="side-nav-left">Sharps &
-                                Flats</a>
+                            <a href="lesson-15-flats-and-sharps.html" class="side-nav-left">Sharps & Flats</a>
                         </li>
 
                         <li>
-                            <a href="lesson-16-power-chords.html" class="side-nav-left">Power
-                                Chords</a>
+                            <a href="lesson-16-power-chords.html" class="side-nav-left">Power Chords</a>
                         </li>
-                        
+
+                        <li>
+                            <a href="lesson-17-intro-and-up-stroke.html" class="side-nav-left">Up Stroke</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-18-sixteenth-notes.html" class="side-nav-left">Sixteenth Notes</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-19-barre-chords-1-first-finger-barre.html" class="side-nav-left">Barre Chords 1</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-20-barre-chords-2-other-three-fingers.html" class="side-nav-left">Barre Chords 2</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-21-barre-chords-3-putting-it-all-together.html" class="side-nav-left">Barre Chords 3</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-22-scratches.html" class="side-nav-left">Scratches</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-23-open-chords-C-major.html" class="side-nav-left">C Chord</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-24-open-chords-F-major.html" class="side-nav-left">F Chord</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-25-open-chords-A-major.html"
+                                class="side-nav-left">A Chord</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-26-open-chords-D-major.html" class="side-nav-left">D Chord</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-27-open-chords-G-major.html"
+                                class="side-nav-left">G Chord</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-28-open-chords-Gadd5-and-Cadd9.html" class="side-nav-left">Gadd5 & Cadd9 Chords</a>
+                        </li>
+
+                        <li>
+                            <a href="lesson-29-capo.html" class="side-nav-left">Capo</a>
+                        </li>
+
+                    
                     </ul>
                 </aside>
 
@@ -186,7 +235,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                         Author : Chris Colby van Scyoc
                         <br>
 
-                        Last Updated : November, 2023
+                        Last Updated : April, 2024
                     </span>
                     <br>
                     <br>
@@ -206,7 +255,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
                     </div>
                     <br>
                     <p>WELCOME, BEGIN, AND WHOLE NOTES<br>
-                        <!-- Charts/Written/Course Material*s - Download PDF<br> -->
+                        <!-- Written Lesson Materials - Download PDF<br> -->
 
                         Fretting Hand - Mute all strings<br>
                         Strumming Hand - Strum all strings, Downstroke
@@ -271,7 +320,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
 
                     <p>Play #2 <br>
                         Written: Ex. 1 <br>
-                        Tempo - 72 BPM
+                        Tempo - 72 BPM
                     </p>
 
                     <div class="ratio ratio-16x9">
@@ -289,7 +338,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
 
                     <p>
                         Play #3
-                        Written: Ex. 1
+                        Written: Ex. 1
                     </p>
 
                     <div class="ratio ratio-16x9">
@@ -423,9 +472,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
 
                     <h2 id="jam">JAM!</h2>
                     <p>JAM #1</p>
-                    <p>PLEASE NOTE: I am aware that some Jam songs will not be available quite yet. I need to figure out
-                        how to get permission from YouTube to embed my own songs! Ha! It's ok. You can move on to the
-                        next lesson or follow the link to watch, listen, and play along on YouTube.</p>
+                    <p>PLEASE NOTE: If a JAM Song is not available. It's ok. You can move on to the next lesson.</p>
 
                     <div class="ratio ratio-16x9">
                         <iframe width="560" height="315"
@@ -511,7 +558,7 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023 Chris Colby van Scyoc.</p>
+            <p class="col-md-4 mb-0 text-body-secondary">&copy; 2024 Chris Colby van Scyoc.</p>
 
             <a href="/"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -521,11 +568,11 @@ NOTE - the chapter links in the left column are not styled like lesson 5 - fix t
             </a>
             <!-- <p>Making music and friends since 1972.</p> -->
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
                 <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Courses</a></li> -->
-                <li class="nav-item"><a href="about.html" class="nav-link px-2 text-body-secondary">About</a></li>
+                <li class="nav-item"><a href="../about.html" class="nav-link px-2 text-body-secondary">About</a></li>
                 <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li> -->
-                <li class="nav-item"><a href="contribute.html" class="nav-link px-2 text-body-secondary">Contribute</a>
+                <li class="nav-item"><a href="../contribute.html" class="nav-link px-2 text-body-secondary">Contribute</a>
                 </li>
                 <!-- <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Chris Music</a></li> -->
                 <!--<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Workshops</a></li>
